# klondike-spec-cli

./: .gitignore  CHANGELOG.md  README.md  WEB_PRD.md  agent-progress.md  pyproject.toml  temp_serve_extract.txt  test_commits_endpoint.py
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/instructions/: git-practices.instructions.md  session-artifacts.instructions.md
.github/prompts/: init-project.prompt.md  session-end.prompt.md  session-start.prompt.md  verify-feature.prompt.md
.github/skills/klondike-agent-workflow/: SKILL.md
.github/skills/klondike-agent-workflow/references/: commands.md  troubleshooting.md  workflows.md
.github/templates/: init.ps1  init.sh
.github/workflows/: publish.yml
.klondike/: agent-progress.json  config.yaml  features.json
docs/: ntfy-config-example.md
klondike-web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
klondike-web/src/: App.tsx  index.css  main.tsx
klondike-web/src/components/: ActivityLog.tsx  AddFeatureForm.tsx  AdvancedSearch.tsx  BottomSheet.tsx  Breadcrumbs.tsx  BulkActions.tsx  CommandPalette.tsx  ConfigEditor.tsx  ConfirmDialog.tsx  Dashboard.tsx  DependencyGraph.tsx  DragDropFeatures.tsx  EmptyStates.tsx  ExpandableFeatureCard.tsx  FeatureTimeline.tsx  KanbanBoard.tsx  Layout.tsx  MarkdownEditor.tsx  OfflineSupport.tsx  PresenceIndicator.tsx  PrintView.tsx  ProgressRing.tsx  QuickAddDialog.tsx  RecentActivityFeed.tsx  SessionBanner.tsx  SessionControl.tsx  SessionTimer.tsx  ShortcutsHelp.tsx  Skeleton.tsx  SpecExplorer.tsx  StatusChart.tsx  TaskViewer.tsx  ThemeCustomizer.tsx  WidgetGrid.tsx
klondike-web/src/hooks/: useCommandPalette.ts  useKeyboardShortcuts.tsx  useTouchGestures.tsx  useWebSocket.ts
klondike-web/src/utils/: accessibility.tsx  api.ts
scripts/: PUBLISHING-GUIDE.md  publish.ps1
src/klondike_spec_cli/: __init__.py  cli.py  completion.py  copilot.py  formatting.py  git.py  mcp_server.py  models.py  ntfy.py  worktree.py
src/klondike_spec_cli/agents/: base.py
src/klondike_spec_cli/commands/: admin.py  agents_cmd.py  features.py  release_cmd.py  serve_cmd.py  sessions.py
src/klondike_spec_cli/static/: index.html  sw.js
src/klondike_spec_cli/static/assets/: index-BcfBK_Up.js  index-Bl_zfboV.css
src/klondike_spec_cli/templates/: __init__.py  agent-progress.json  config.yaml  features.json
src/klondike_spec_cli/templates/github_templates/: copilot-instructions.md
src/klondike_spec_cli/templates/github_templates/instructions/: session-artifacts.instructions.md  worktree-practices.instructions.md
src/klondike_spec_cli/templates/github_templates/prompts/: add-features.prompt.md  continuous-implementation.prompt.md  init-project.prompt.md
src/klondike_spec_cli/templates/github_templates/templates/: features.schema.json
tests/: test_cli.py  test_git.py  test_mcp.py  test_models.py  test_templates.py
