[project]
name = "klondike-spec-cli"
dynamic = ["version"]
description = "CLI tool for managing Klondike Spec agent workflow artifacts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Thomas Rohde" }]
keywords = ["cli", "agent", "workflow", "copilot", "klondike-spec"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = ["pypith>=0.1.0", "pyyaml>=6.0", "rich>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.1.0", "mypy>=1.0"]
mcp = ["mcp>=1.2.0"]
all = ["mcp>=1.2.0"]

[project.scripts]
klondike = "klondike_spec_cli.cli:main"

[project.urls]
Homepage = "https://github.com/ThomasRohde/klondike-spec-cli"
Repository = "https://github.com/ThomasRohde/klondike-spec-cli"
Issues = "https://github.com/ThomasRohde/klondike-spec-cli/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/klondike_spec_cli/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/klondike_spec_cli"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

# Include template files in the package
[tool.hatch.build.targets.wheel.force-include]
"src/klondike_spec_cli/templates/features.json" = "klondike_spec_cli/templates/features.json"
"src/klondike_spec_cli/templates/agent-progress.json" = "klondike_spec_cli/templates/agent-progress.json"
"src/klondike_spec_cli/templates/config.yaml" = "klondike_spec_cli/templates/config.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=klondike_spec_cli --cov-report=term-missing"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
exclude = ["src/klondike_spec_cli/_version.py"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
